## Process this file with automake to produce Makefile.in

REFERENCE_MAIN_FILE = gtksourceview-classes.xml
REFERENCE_DOC_NAME = pygtksourceview
DOC_MODULE = pygtksourceview

REFERENCE_XML_FILES = gtksourceview-gtksourceview.xml gtksourceview-gtksourcebuffer.xml

include $(top_srcdir)/docs/pygtk-ref-docs.make

# we ship html docs with the tarball
EXTRA_DIST += html html.stamp

